# ass3

./: .gitignore  README.md  assignment_3.ipynb  pyproject.toml  uv-setup.txt
.github/: copilot-instructions.md
data/: test_data.txt
